--- a/favorites/awesome/anime.html
+++ b/favorites/awesome/anime.html
@@ -20,11 +20,12 @@
             <div class="toolkit_card">
                 <div class="toolkit_flex" style="max-width: 1200px;">
                     <!-- a[target="_blank"]>div.anime>(div.anime_img>div.anime_days+img)+p.anime_name+(div.anime_container>div.anime_rate[style="width: 0%;"]+{0/12})*1 -->
+                    <!-- 1-8 2-16 3-25 4-33 5-41 6-50 7-58 8-66 9-75 10-83 11-91 12-100 -->
                     <a href="https://bgm.tv/subject/401783" target="_blank">
                         <div class="anime">
                             <div class="anime_img">
                                 <div class="anime_days">五</div>
-                                <img src="https://lain.bgm.tv/pic/cover/l/83/14/401783_Q3m8a.jpg" alt="">
+                                <img src="https://lain.bgm.tv/pic/cover/l/83/14/401783_Q3m8a.jpg">
                             </div>
                             <p class="anime_name">租借女友 第三季</p>
                             <div class="anime_container">
@@ -40,7 +41,7 @@
                                 <img src="https://lain.bgm.tv/r/400/pic/cover/l/bb/bf/425236_3CtyP.jpg">
                             </div>
                             <p class="anime_name">莱莎的炼金工房 ～常暗女王与秘密藏身处～</p>
-                            <div class="anime_container"><div class="anime_rate" style="width: 16%;"></div>2/12</div>
+                            <div class="anime_container"><div class="anime_rate" style="width: 25%;"></div>3/12</div>
                         </div>
                     </a>
                     <a href="https://bgm.tv/subject/414461" target="_blank">
