--- a/favorites/awesome/movie.html
+++ b/favorites/awesome/movie.html
@@ -34,21 +34,21 @@
                             <td><a href="https://movie.douban.com/subject/3742360/" target="_blank"><b>让子弹飞</b></a></td>
                             <td>姜文</td>
                             <td><div class="star"><img src="../../icon/star-s-fill.svg"></div></td>
-                            <td></td>
+                            <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
                         </tr>
                         <tr>
                             <td>2015</td>
                             <td><a href="https://movie.douban.com/subject/25964071/" target="_blank"><b>夏洛特烦恼</b></a></td>
                             <td>闫非 / 彭大魔</td>
                             <td class="center">7</td>
-                            <td></td>
+                            <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
                         </tr>
                         <tr>
                             <td>2018</td>
                             <td><a href="https://movie.douban.com/subject/27605698/" target="_blank"><b>西虹市首富</b></a></td>
                             <td>闫非 / 彭大魔</td>
                             <td class="center">7</td>
-                            <td></td>
+                            <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
                         </tr>
                         <tr>
                             <td>2018</td>
