--- a/favorites/awesome/tv.html
+++ b/favorites/awesome/tv.html
@@ -252,8 +252,8 @@
                             <td>2013</td>
                             <td><a href="https://movie.douban.com/subject/21328704/" target="_blank"><b>家族游戏 <span class="name">家族ゲーム</span></b></a></td>
                             <td>樱井翔 / 神木隆之介</td>
-                            <td class="center">8</td>
-                            <td></td>
+                            <td class="center">9</td>
+                            <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
                         </tr>
                         <tr>
                             <td>2013</td>
