--- a/favorites/software/linux.html
+++ b/favorites/software/linux.html
@@ -4,23 +4,147 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>Linux | 阿源的收藏夹</title>
     </head>
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>Linux</h1>
+                </div>
+            </div>
+            <div class="flex_row_wrap">
+            <div class="list">
+            <h2>内核</h2>
+            <ul>
+                <li><a href="https://www.kernel.org/" target="_blank" rel="noopener noreferrer">Linux Kernel</a></li>
+            </ul>
+            <h3>发行版</h3>
+            <ul>
+                <li><a href="https://www.debian.org/" target="_blank" rel="noopener noreferrer"><b>Debian</b></a></li>
+                <li><a href="https://ubuntu.com/" target="_blank" rel="noopener noreferrer"><b>Ubuntu</b></a></li>
+                <ul>
+                    <li><a href="https://kubuntu.org/getkubuntu/" target="_blank" rel="noopener noreferrer">Kubuntu</a></li>
+                    <li><a href="https://xubuntu.org/" target="_blank" rel="noopener noreferrer">Xubuntu</a></li>
+                    <li><a href="https://lubuntu.me/hirsute-released/" target="_blank" rel="noopener noreferrer">Lubuntu</a></li>
+                    <li><a href="https://ubuntubudgie.org/downloads/" target="_blank" rel="noopener noreferrer">Ubuntu Budgie</a></li>
+                    <li><a href="https://ubuntucinnamon.org/" target="_blank" rel="noopener noreferrer">Ubuntu Cinnamon</a></li>
+                    <li><a href="https://www.ubuntukylin.com/downloads/index-cn.html" target="_blank" rel="noopener noreferrer">Ubuntu Kylin</a></li>
+                    <li><a href="https://ubuntu-mate.org/" target="_blank" rel="noopener noreferrer">Ubuntu MATE</a></li>
+                    <li><a href="https://ubuntustudio.org/" target="_blank" rel="noopener noreferrer">Ubuntu Studio</a></li>
+                    <li><a href="https://ubuntuunity.org/" target="_blank" rel="noopener noreferrer">Ubuntu Unity</a></li>
+                </ul>
+                <li><a href="https://www.raspberrypi.com/software/" target="_blank" rel="noopener noreferrer">Raspberry Pi OS</a></li>
+                <li><a href="https://linuxmint.com/" target="_blank" rel="noopener noreferrer">Linux Mint</a></li>
+                <li><a href="https://www.deepin.org/index/zh" target="_blank" rel="noopener noreferrer">Deepin</a></li>
+                <li><a href="https://www.redhat.com/zh/technologies/linux-platforms/enterprise-linux" target="_blank" rel="noopener noreferrer">Red Hat Enterprise Linux</a></li>
+                <li><a href="https://rockylinux.org/zh_CN/" target="_blank" rel="noopener noreferrer"><b>Rocky Linux</b></a></li>
+                <li><a href="https://www.centos.org/centos-linux/" target="_blank" rel="noopener noreferrer">CentOS Linux</a></li>
+                <li><a href="https://www.fedoraproject.org/" target="_blank" rel="noopener noreferrer">Fedora</a></li>
+                <li><a href="https://www.opensuse.org/#Tumbleweed" target="_blank" rel="noopener noreferrer">openSUSE</a></li>
+                <li><a href="https://www.alpinelinux.org/" target="_blank" rel="noopener noreferrer">Alpine Linux</a></li>
+                <li><a href="https://www.kali.org/" target="_blank" rel="noopener noreferrer">Kali Linux</a></li>
+                <li><a href="https://archlinux.org/" target="_blank" rel="noopener noreferrer">Arch Linux</a></li>
+                <li><a href="https://manjaro.org/" target="_blank" rel="noopener noreferrer">Manjaro</a></li>
+                <li><a href="https://www.truenas.com/download-truenas-scale/" target="_blank" rel="noopener noreferrer">TrueNAS SCALE</a></li>
+                <li><a href="https://elementary.io/zh_CN/" target="_blank" rel="noopener noreferrer">elementary OS</a></li>
+                <li><a href="https://zorin.com/os/" target="_blank" rel="noopener noreferrer">Zorin OS</a></li>
+                <li><a href="https://getsol.us/" target="_blank" rel="noopener noreferrer">Solus</a></li>
+                <li><a href="https://www.linuxfromscratch.org/" target="_blank" rel="noopener noreferrer">Linux From Scratch</a></li>
+            </ul>
+            </div>
+            <div class="list">
+            <h2>软件</h2>
+            <h3>浏览器</h3>
+            <ul>
+                <li><a href="https://www.google.cn/chrome/" target="_blank" rel="noopener noreferrer">Chrome</a></li>
+                <li><a href="https://www.mozilla.org/en-US/firefox/" target="_blank" rel="noopener noreferrer">Firefox</a></li>
+            </ul>
+            <h3>下载</h3>
+            <ul>
+                <li><a href="https://aria2.github.io/" target="_blank" rel="noopener noreferrer">Aria2</a></li>
+                <li><a href="https://www.qbittorrent.org/" target="_blank" rel="noopener noreferrer">qBittorrent</a></li>
+            </ul>
+            <h3>音乐播放</h3>
+            <ul>
+                <li><a href="https://y.qq.com/download/download.html" target="_blank" rel="noopener noreferrer">QQ音乐</a></li>
+            </ul>
+            <h3>文档处理</h3>
+            <ul>
+                <li><a href="https://zh-cn.libreoffice.org/" target="_blank" rel="noopener noreferrer">LibreOffice</a></li>
+                <li><a href="https://www.wps.cn/product/wpslinux" target="_blank" rel="noopener noreferrer">WPS Office 2019 For Linux</a></li>
+            </ul>
+            <h3>视频播放</h3>
+            <ul>
+                <li><a href="https://www.videolan.org/" target="_blank" rel="noopener noreferrer">VLC media player</a></li>
+            </ul>
+            <h3>即时通信</h3>
+            <ul>
+                <li><a href="https://im.qq.com/linuxqq/index.shtml" target="_blank" rel="noopener noreferrer">QQ</a></li>
+                <li><a href="https://telegram.org/" target="_blank" rel="noopener noreferrer">Telegram</a></li>
+            </ul>
+            <h3>输入法</h3>
+            <ul>
+                <li><a href="https://shurufa.sogou.com/linux" target="_blank" rel="noopener noreferrer">搜狗拼音输入法</a></li>
+                <li><a href="https://rime.im/" target="_blank" rel="noopener noreferrer">RIME</a></li>
+            </ul>
+            <h3>游戏平台</h3>
+            <ul>
+                <li><a href="https://store.steampowered.com/about/" target="_blank" rel="noopener noreferrer">Steam</a></li>
+            </ul>
+            <h3>远程控制</h3>
+            <ul>
+                <li><a href="https://sunlogin.oray.com/" target="_blank" rel="noopener noreferrer"><b>向日葵</b></a></li>
+            </ul>
+            <h3>密码管理</h3>
+            <ul>
+                <li><a href="https://keepass.info/" target="_blank" rel="noopener noreferrer">KeePass2</a></li>
+            </ul>
+            <h3>虚拟机</h3>
+            <ul>
+                <li><a href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a></li>
+            </ul>
+            <h3>录屏&直播</h3>
+            <ul>
+                <li><a href="https://obsproject.com/" target="_blank" rel="noopener noreferrer">OBS Studio</a></li>
+            </ul>
+            <h3>3D建模</h3>
+            <ul>
+                <li><a href="https://www.blender.org/" target="_blank" rel="noopener noreferrer">Blender</a></li>
+            </ul>
+            <h3>图片制作</h3>
+            <ul>
+                <li><a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer">Gimp</a></li>
+                <li><a href="https://inkscape.org/zh-hans/" target="_blank" rel="noopener noreferrer">Inkscape</a></li>
+            </ul>
+            <h3>绘图软件</h3>
+            <ul>
+                <li><a href="https://krita.org/zh/" target="_blank" rel="noopener noreferrer">Krita</a></li>
+            </ul>
+            <h3>视频制作</h3>
+            <ul>
+                <li><a href="https://www.blackmagicdesign.com/cn/products/davinciresolve/" target="_blank" rel="noopener noreferrer">DaVinci Resolve</a></li>
+            </ul>
+            <h3>视频转码</h3>
+            <ul>
+                <li><a href="https://ffmpeg.org/" target="_blank" rel="noopener noreferrer">FFmpeg</a></li>
+            </ul>
+            <h3>计算机辅助设计 CAD</h3>
+            <ul>
+                <li><a href="https://www.freecad.org/index.php" target="_blank" rel="noopener noreferrer">FreeCAD</a></li>
+                <li><a href="https://librecad.org/" target="_blank" rel="noopener noreferrer">LibreCAD</a></li>
+            </ul>
+            <h3>其他</h3>
+            <ul>
+                <li><a href="https://calibre-ebook.com/" target="_blank" rel="noopener noreferrer">Caliber <span class="name">一站式电子书解决方案</span></a></li>
+                <li><a href="https://github.com/Dreamacro/clash" target="_blank" rel="noopener noreferrer">Clash <span class="name">A rule-based tunnel in Go.</span></a></li>
+                <li><a href="https://github.com/v2fly/v2ray-core" target="_blank" rel="noopener noreferrer">V2Ray <span class="name">A platform for building proxies to bypass network restrictions.</span></a></li>
+            </ul>
+            </div>
+        </div>
         </div>
     </body>
-    <script>
-        const { createApp } = Vue
-
-        createApp({
-            data() {
-                return {}
-            },
-            methods: {},
-        }).mount("#app")
-    </script>
 </html>
