--- a/favorites/software/web.html
+++ b/favorites/software/web.html
@@ -4,23 +4,98 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>Web | 阿源的收藏夹</title>
     </head>
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>Web</h1>
+                </div>
+            </div>
+            <div class="flex_row_wrap">
+                <div class="list">
+                <h3>在线工具</h3>
+                <ul>
+                    <li><a href="http://www.lsjgcx.com/" target="_blank" rel="noopener noreferrer">历史价格查询</a></li>
+                    <li><a href="https://www.speedtest.net/zh-Hans" target="_blank" rel="noopener noreferrer">Speedtest <span class="name">网络测速</span></a></li>
+                    <li><a href="https://app.diagrams.net/" target="_blank" rel="noopener noreferrer">Draw.io <span class="name">免费的流程图绘制工具</span></a></li>
+                    <li><a href="https://www.processon.com/" target="_blank" rel="noopener noreferrer">Processon <span class="name">流程图思维导图</span></a></li>
+                    <li><a href="https://asciiflow.com/" target="_blank" rel="noopener noreferrer">纯文本流程图表制作</a></li>
+                    <li><a href="https://www.ico51.cn/" target="_blank" rel="noopener noreferrer">生成透明ICO图标</a></li>
+                    <li><a href="https://convertio.co/zh/ico-converter/" target="_blank" rel="noopener noreferrer">ICO转换器</a></li>
+                    <li><a href="https://realfavicongenerator.net/" target="_blank" rel="noopener noreferrer">Favicon Generator <span class="name">全平台完美图标</span></a></li>
+                    <li><a href="https://maorx.cn/yxh/" target="_blank" rel="noopener noreferrer">营销号文案生成器</a></li>
+                    <li><a href="https://smallpdf.com/cn" target="_blank" rel="noopener noreferrer">Smallpdf <span class="name">PDF工具</span></a></li>
+                    <li><a href="https://www.photopea.com/" target="_blank" rel="noopener noreferrer">Photopea <span class="name">在线PS</span></a></li>
+                    <li><a href="https://ps.gaoding.com/#/" target="_blank" rel="noopener noreferrer">稿定设计 <span class="name">在线PS 国内版</span></a></li>
+                    <li><a href="http://to-a.ru/" target="_blank" rel="noopener noreferrer">某樱花的图片生成</a></li>
+                    <li><a href="https://www.alltoall.net/" target="_blank" rel="noopener noreferrer">在线格式转换</a></li>
+                    <li><a href="https://open.weixin.qq.com/qr/code?username=mineraltown" target="_blank" rel="noopener noreferrer">公众号二维码接口</a></li>
+                    <li><a href="https://demo.unlock-music.dev/" target="_blank" rel="noopener noreferrer">音乐解锁</a></li>
+                    <li><a href="https://mi-logo.lvwzhen.com/" target="_blank" rel="noopener noreferrer">小米风格Logo生成器</a></li>
+                    <li><a href="http://www.ytb.io/" target="_blank" rel="noopener noreferrer">YouTube 视频解析</a></li>
+                    <li><a href="http://ja.voicedic.com/" target="_blank" rel="noopener noreferrer">日语汉字读音速查</a></li>
+                    <li><a href="https://vocalremover.org/zh/" target="_blank" rel="noopener noreferrer">在线人声分离</a></li>
+                    <li><a href="https://www.baidufe.com/fehelper/index/index.html" target="_blank" rel="noopener noreferrer">Web开发者助手</a></li>
+                    <li><a href="https://chenyajiao.com/gamelist/jobvaluecalculator" target="_blank" rel="noopener noreferrer">工作性价比计算器</a></li>
+                    <li><a href="https://tool.oschina.net/" target="_blank" rel="noopener noreferrer">oschina在线工具</a></li>
+                    <li><a href="https://tool.lu/" target="_blank" rel="noopener noreferrer">在线工具</a></li>
+                    <li><a href="https://imgflip.com/memegenerator/Drake-Hotline-Bling" target="_blank" rel="noopener noreferrer">国外梗图生成器</a></li>
+                    <li><a href="https://waifu2x.udp.jp/index.zh-CN.html" target="_blank" rel="noopener noreferrer">Waifu2x <span class="name">图片降噪放大</span></a></li>
+                    <li><a href="https://bigjpg.com/" target="_blank" rel="noopener noreferrer">Bigjpg <span class="name">AI人工智能图片放大  </span></a></li>
+                    <li><a href="http://www.simpletool.cn/" target="_blank" rel="noopener noreferrer">身份证加水印</a></li>
+                    <li><a href="https://screely.com/" target="_blank" rel="noopener noreferrer">Screely <span class="name">美化截图</span></a></li>
+                    <li><a href="https://www.xiuzhan365.com/" target="_blank" rel="noopener noreferrer">秀展网 <span class="name">在线制作MG动画</span></a></li>
+                    <li><a href="https://yijiangaitu.com/" target="_blank" rel="noopener noreferrer">一键改图</a></li>
+                    <li><a href="https://logolab.app/home" target="_blank" rel="noopener noreferrer">模拟 Logo 可用性</a></li>
+                    <li><a href="https://www.designevo.com/cn/" target="_blank" rel="noopener noreferrer">DesignEvo <span class="name">免费 Logo 生成</span></a></li>
+                    <li><a href="https://www.freelogodesign.org/" target="_blank" rel="noopener noreferrer">FreeLogoDesign <span class="name">免费 Logo 生成</span></a></li>
+                    <li><a href="https://studio.design/" target="_blank" rel="noopener noreferrer">AI生成网页原型</a></li>
+                    <li><a href="https://photokit.com/?lang=zh" target="_blank" rel="noopener noreferrer">PhotoKit <span class="name">图片编辑器</span></a></li>
+                    <li><a href="https://www.remove.bg/zh" target="_blank" rel="noopener noreferrer"><del>remove bg</del> <span class="name">图片背景去除</span></a></li>
+                    <li><a href="https://bgeraser.com/" target="_blank" rel="noopener noreferrer"><del>bgeraser</del> <span class="name">图片背景去除</span></a></li>
+                    <li><a href="https://www.ppzhilian.com/" target="_blank" rel="noopener noreferrer">PP直连</a></li>
+                    <li><a href="https://cowtransfer.com/" target="_blank" rel="noopener noreferrer">奶牛快传</a></li>
+                    <li><a href="https://airportal.cn/" target="_blank" rel="noopener noreferrer">空投快传</a></li>
+                    <li><a href="https://github.com/RobinLinus/snapdrop" target="_blank" rel="noopener noreferrer">Snapdrop <span class="name">局域网文件传输</span></a></li>
+                    <li><a href="https://blaze.vercel.app/" target="_blank" rel="noopener noreferrer">Blaze <span class="name">跨平台文件共享</span></a></li>
+                    <li><a href="https://testufo.com/" target="_blank" rel="noopener noreferrer">testufo <span class="name">测试显示器/手机屏幕刷新率</span></a></li>
+                    <li><a href="https://www.glideapps.com/" target="_blank" rel="noopener noreferrer">Glide <span class="name">快速创建自己的应用</span></a></li>
+                    <li><a href="https://xiezuocat.com/#/" target="_blank" rel="noopener noreferrer">秘塔写作猫</a></li>
+                    <li><a href="https://bulletjournal.app/" target="_blank" rel="noopener noreferrer">Bullet <span class="name">待办事项与日历</span></a></li>
+                    <li><a href="http://www.xnet.se/fd/" target="_blank" rel="noopener noreferrer">File Destructor <span class="name">肆意生成任意大小的错误文档</span></a></li>
+                    <li><a href="https://size.link/" target="_blank" rel="noopener noreferrer">size.link <span class="name">在增强现实中可视化维度</span></a></li>
+                    <li><a href="https://www.moulem.com/" target="_blank" rel="noopener noreferrer">某柠檬的导航</a></li>
+                    <li><a href="https://hat.sh/" target="_blank" rel="noopener noreferrer">hat.sh <span class="name">客户端文件加密</span></a></li>
+                    <li><a href="https://www.xiaohuazhuo.com/" target="_blank" rel="noopener noreferrer">小画桌 <span class="name">在线协作白板</span></a></li>
+                    <li><a href="https://squoosh.app/" target="_blank" rel="noopener noreferrer">Squoosh <span class="name">在线图片压缩</span></a></li>
+                </ul>
+                </div>
+                <div class="list">
+                    <h3>网站搭建</h3>
+                    <ul>
+                        <li><a href="https://www.gitbook.com/" target="_blank" rel="noopener noreferrer">Gitbook<span class="name">共享知识</span></a></li>
+                        <li><a href="https://about.gitlab.com/" target="_blank" rel="noopener noreferrer">Gitlab <span class="name">自己的代码托管平台</span></a></li>
+                        <li><a href="https://docs.gitea.com/zh-cn/" target="_blank" rel="noopener noreferrer">Gitea <span class="name">自己托管的Git服务</span></a></li>
+                        <li><a href="https://nextcloud.com/" target="_blank" rel="noopener noreferrer">Nextcloud <span class="name">私有云盘</span></a></li>
+                        <li><a href="http://www.dzzoffice.com/" target="_blank" rel="noopener noreferrer">DzzOffice <span class="name">开源办公套件</span></a></li>
+                        <li><a href="https://larsjung.de/h5ai/" target="_blank" rel="noopener noreferrer">h5ai <span class="name">HTTP Web 文件服务器</span></a></li>
+                        <li><a href="https://typecho.org/" target="_blank" rel="noopener noreferrer">Typecho <span class="name">开源博客</span></a></li>
+                        <li><a href="https://cn.wordpress.org/" target="_blank" rel="noopener noreferrer">WordPress <span class="name">免费开源内容管理系统</span></a></li>
+                        <li><a href="https://www.emlog.net/" target="_blank" rel="noopener noreferrer">emlog <span class="name">轻量级博客及CMS建站系统</span></a></li>
+                        <li><a href="https://www.discourse.org/" target="_blank" rel="noopener noreferrer">Discourse <span class="name">开源论坛</span></a></li>
+                        <li><a href="https://www.discuz.vip/" target="_blank" rel="noopener noreferrer">Discuz!  <span class="name">开源建站系统</span></a></li>
+                        <li><a href="http://startmvc.com/" target="_blank" rel="noopener noreferrer">StartMVC <span class="name">开源超轻量PHP框架</span></a></li>
+                        <li><a href="https://www.mediawiki.org/wiki/MediaWiki" target="_blank" rel="noopener noreferrer">MediaWiki <span class="name">开源百科系统</span></a></li>
+                        <li><a href="https://github.com/alvis-u/uexam" target="_blank" rel="noopener noreferrer">学之思 <span class="name">开源在线考试系统</span></a></li>
+                        <li><a href="https://open.gridea.dev/" target="_blank" rel="noopener noreferrer">Gridea <span class="name">静态博客写作客户端</span></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
-    <script>
-        const { createApp } = Vue
-
-        createApp({
-            data() {
-                return {}
-            },
-            methods: {},
-        }).mount("#app")
-    </script>
 </html>
